fix(nav): 1rem gap between its link columns

--- a/packages/components/src/components/bal-nav/bal-nav-link-grid-col/bal-nav-link-grid-col.sass
+++ b/packages/components/src/components/bal-nav/bal-nav-link-grid-col/bal-nav-link-grid-col.sass
@@ -24,6 +24,7 @@
       +widescreen
         display: flex
         flex-wrap: wrap
+        gap: var(--bal-space-normal)
       //
       // Link group
       .bal-nav-link-group
@@ -33,4 +34,4 @@
           padding-left: 0
           padding-right: 0
         +widescreen
-          width: 50%
+          width: calc(50% - calc(var(--bal-space-normal) / 2))
